--- a/Contratos.csproj
+++ b/Contratos.csproj
@@ -8,6 +8,8 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.6" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.36" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.28" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.28">
 		  <PrivateAssets>all</PrivateAssets>
